--- a/src/Playground/Playground.Original/PlaygroundAppShell.xaml
+++ b/src/Playground/Playground.Original/PlaygroundAppShell.xaml
@@ -9,6 +9,7 @@
     xmlns:pages="clr-namespace:Playground.Original.Views.Pages"
     xmlns:shell="clr-namespace:SimpleToolkit.SimpleShell;assembly=SimpleToolkit.SimpleShell"
     xmlns:behaviors="clr-namespace:Playground.Original.Behaviors"
+    xmlns:c="clr-namespace:Playground.Original"
     x:Name="thisShell"
     Background="White">
     <shell:SimpleShell.Resources>
@@ -116,9 +117,9 @@
                 Grid.Row="1"
                 IsScrollable="False"
                 ItemSelected="TabBarItemSelected"
-                Items="{Binding Source={x:Reference thisShell}, Path=ShellSections}"
+                Items="{Binding Source={x:Reference thisShell}, Path=ShellSections, x:DataType={x:Type shell:SimpleShell}}"
                 ItemsAlignment="Center"
-                SelectedItem="{Binding Source={x:Reference thisShell}, Path=CurrentShellSection}"
+                SelectedItem="{Binding Source={x:Reference thisShell}, Path=CurrentShellSection, x:DataType={x:Type shell:SimpleShell}}"
                 Style="{StaticResource MaterialTabbar}" />
         </Grid>
     </shell:SimpleShell.RootPageContainer>
@@ -138,7 +139,7 @@
                 <core:ContentButton
                     x:Name="backButton"
                     Background="Transparent"
-                    Command="{Binding BackCommand, Source={x:Reference thisShell}}"
+                    Command="{Binding BackCommand, Source={x:Reference thisShell}, x:DataType={x:Type c:PlaygroundAppShell}}"
                     VerticalOptions="Center">
                     <core:Icon Style="{StaticResource AppBarIcon}">
                         <core:Icon.Source>
@@ -158,7 +159,7 @@
                     FontSize="15"
                     HorizontalOptions="Center"
                     HorizontalTextAlignment="Center"
-                    Text="{Binding Source={x:Reference thisShell}, Path=CurrentPage.Title}"
+                    Text="{Binding Source={x:Reference thisShell}, Path=CurrentPage.Title, x:DataType={x:Type shell:SimpleShell}}"
                     VerticalOptions="Center" />
 
                 <core:ContentButton
@@ -208,7 +209,7 @@
                     Clicked="ShowPopoverButtonClicked"
                     VerticalOptions="Center">
                     <core:Popover.AttachedPopover>
-                        <controls:ListPopover x:Name="toolbarItemsPopover" Items="{Binding Source={x:Reference thisShell}, Path=CurrentPage.ToolbarItems}" />
+                        <controls:ListPopover x:Name="toolbarItemsPopover" Items="{Binding Source={x:Reference thisShell}, Path=CurrentPage.ToolbarItems, x:DataType={x:Type shell:SimpleShell}}" />
                     </core:Popover.AttachedPopover>
 
                     <core:Icon Style="{StaticResource AppBarIcon}">
@@ -244,7 +245,7 @@
                 Clicked="AddButtonClicked"
                 Text="Add"
                 VerticalOptions="Center" />
-            <Label Text="{Binding Source={x:Reference thisShell}, Path=CurrentPage.Title}" VerticalOptions="Center" />
+            <Label Text="{Binding Source={x:Reference thisShell}, Path=CurrentPage.Title, x:DataType={x:Type shell:SimpleShell}}" VerticalOptions="Center" />
         </HorizontalStackLayout>
     </Shell.TitleView>
 
