--- a/src/Playground/Playground.Original/Views/Controls/PopoverTest.xaml
+++ b/src/Playground/Playground.Original/Views/Controls/PopoverTest.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:simpleCore="clr-namespace:SimpleToolkit.Core;assembly=SimpleToolkit.Core"
+    xmlns:c="clr-namespace:Playground.Original.Views.Controls"
     x:Name="thisButton"
     Clicked="ButtonClicked"
     Text="Show Popover">
 
     <simpleCore:Popover.AttachedPopover>
-        <simpleCore:Popover x:Name="popover" Alignment="{Binding Source={x:Reference thisButton}, Path=PopoverAlignment}">
+        <simpleCore:Popover x:Name="popover" Alignment="{Binding Source={x:Reference thisButton}, Path=PopoverAlignment, x:DataType={x:Type c:PopoverTest}}">
             <Grid
                 x:Name="resizablePopoverContent"
                 Background="#f2f2f2"
