--- a/src/Playground/SimpleShell/Playground.NoTabs/AppShell.xaml
+++ b/src/Playground/SimpleShell/Playground.NoTabs/AppShell.xaml
@@ -41,7 +41,7 @@
                 Grid.Row="1"
                 Margin="20,5"
                 HorizontalOptions="Center" Spacing="10"
-                BindableLayout.ItemsSource="{Binding ShellContents, Source={x:Reference thisShell}}">
+                BindableLayout.ItemsSource="{Binding ShellContents, Source={x:Reference thisShell}, x:DataType={x:Type shell:SimpleShell}}">
                 <BindableLayout.ItemTemplate>
                     <DataTemplate
                         x:DataType="BaseShellItem">
