--- a/src/Samples/Sample.SimpleShellTopBar/Views/Controls/TopBarScaffold.xaml
+++ b/src/Samples/Sample.SimpleShellTopBar/Views/Controls/TopBarScaffold.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:simpleCore="clr-namespace:SimpleToolkit.Core;assembly=SimpleToolkit.Core"
     x:Class="Sample.SimpleShellTopBar.Views.Controls.TopBarScaffold"
-    
+    xmlns:c="clr-namespace:Sample.SimpleShellTopBar.Views.Controls"
     x:Name="scaffold">
 
     <ContentView.Content>
@@ -17,7 +17,7 @@
                 Padding="0, 5"
                 MinimumHeightRequest="60">
                 <simpleCore:ContentButton
-                    IsVisible="{Binding Source={x:Reference scaffold}, Path=IsBackButtonVisible}"
+                    IsVisible="{Binding Source={x:Reference scaffold}, Path=IsBackButtonVisible, x:DataType={x:Type c:TopBarScaffold}}"
                     VerticalOptions="Center" HorizontalOptions="Center"
                     HeightRequest="30" WidthRequest="30"
                     StrokeThickness="0"
@@ -37,7 +37,7 @@
 
             <ContentView
                 x:Name="pageContent"
-                Content="{Binding Source={x:Reference scaffold}, Path=PageContent}"
+                Content="{Binding Source={x:Reference scaffold}, Path=PageContent, x:DataType={x:Type c:TopBarScaffold}}"
                 Grid.Row="1"
                 CompressedLayout.IsHeadless="True"/>
         </Grid>
