--- a/src/Samples/Sample.SimpleShellTopBar/Views/Pages/FirstDetailPage.xaml
+++ b/src/Samples/Sample.SimpleShellTopBar/Views/Pages/FirstDetailPage.xaml
@@ -9,7 +9,7 @@
     x:Name="thisPage">
 
     <controls:TopBarScaffold
-        Title="{Binding Title, Source={x:Reference thisPage}}">
+        Title="{Binding Title, Source={x:Reference thisPage}, x:DataType={x:Type ContentPage}}">
 
         <VerticalStackLayout
             VerticalOptions="Center"
